--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todolist",
+  "name": "study",
   "version": "1.0.0",
   "description": "",
   "main": "event.js",
@@ -15,5 +15,9 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
