--- a/src/2.끝말잇기/package.json
+++ b/src/2.끝말잇기/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "event.js",
   "scripts": {
-    "dev": "webpack",
-    "build": "next build",
-    "start": "next start"
+    "dev": "webpack serve --env development"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +15,14 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "babel-loader": "^9.1.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "react-refresh": "^0.14.0",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
